--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/node:10.16.3
+      - image: circleci/node:18.2.0
     working_directory: ~/repo
     steps:
       - checkout
@@ -14,9 +14,9 @@ jobs:
       - run:
           name: Install Dependencies
           command: npm install
-      #- run:
-      #    name: Run tests
-      #    command: npm run test
+      - run:
+          name: Run tests
+          command: npm run test
 
 workflows:
   heroku_deploy:
