Configuring config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,10 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/node:18.2.0
+      - image: circleci/node:12.6.1
     working_directory: ~/repo
     steps:
-      - checkout
+      - checkoutlm m,
       # install dependencies
       - run:
           name: Install Dependencies
