--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,17 +6,17 @@ orbs:
 jobs:
   build:
     docker:
-      - image: circleci/node:12.6.1
+      - image: circleci/node:10.16.3
     working_directory: ~/repo
     steps:
-      - checkoutlm m,
+      - checkout
       # install dependencies
       - run:
           name: Install Dependencies
           command: npm install
-      - run:
-          name: Run tests
-          command: npm run test
+      #- run:
+      #    name: Run tests
+      #    command: npm run test
 
 workflows:
   heroku_deploy:
